--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 <body>
 
     <!-- JSnack1 -->
-    <div id="words"></div>
+    <div id="words">Prima la parola più corta:</div>
 
     <!-- JSnack2 -->
-    <div id="sum1"></div>
+    <div id="sum1">somma i numeri</div>
 
-    <div id="sum2"></div>
+    <div id="sum2">somma i numeri pari</div>
 
 
     <!-- JSnack3 -->
-    <div id="array"></div>
+    <div id="array">array solo numeri dispari</div>
 
     <!-- JSnack4 -->
-    <div id="invited"></div>
+    <div id="invited">Posso partecipare alla festa?</div>
 
 
     
